Fix Invisible Text

--- a/Stylesheets/Google.css
+++ b/Stylesheets/Google.css
@@ -550,7 +550,7 @@ a.duf3 {
 	margin-left: auto;
 	margin-right: auto;
 }
-.H1ccWd {
+.H1ccWd, .ravrDc.V83UB {
 	color: white !important;
 }
 #lxhdr {
